--- a/sass/base.sass
+++ b/sass/base.sass
@@ -4,7 +4,9 @@
   display: block
   width: $width
   border-radius: $radius
-  padding: 0 ratio(5) 0 0
+  padding: 0
+  white-space: nowrap
+  overflow: hidden
   outline: none
   cursor: pointer
   background: $background
@@ -33,5 +35,5 @@
   text-transform: uppercase
   color: $color
   opacity: $opacity
-  white-space: nowrap
   font-family: 'Roboto', sans-serif
+  padding-right: ratio(8)
